Réorganisation des commentaires

--- a/tpl/_comments.html
+++ b/tpl/_comments.html
@@ -1,48 +1,43 @@
 <tpl:EntryIf operator="or" comments_active="1" pings_active="1">
-  <div id="{{tpl:lang comments}}" class="comment-block">
+  <div id="{{tpl:lang reactions}}" class="reactions-block">
+
+  <tpl:EntryIf operator="and" has_comment="1" has_ping="1">
+    <h3 class="reaction-title" id="comments-title">{{tpl:EntryCommentCount one="One reaction" more="%d reactions" count_all="1"}}</h3>
+  </tpl:EntryIf>
+
+  <tpl:EntryIf operator="and" has_comment="1" has_ping="0">
+    <h3 class="reaction-title" id="comments-title">{{tpl:EntryCommentCount one="One comment" more="%d comments"}}</h3>
+  </tpl:EntryIf>
+
+  <tpl:EntryIf operator="and" has_comment="0" has_ping="1">
+    <h3 class="reaction-title" id="comments-title">{{tpl:EntryPingCount one="One trackback" more="%d trackbacks"}}</h3>
+  </tpl:EntryIf>
 </tpl:EntryIf>
 
 <tpl:EntryIf show_comments="1">
   <tpl:Comments with_pings="1">
     <tpl:CommentsHeader>
-      <h3 id="comments-title">{{tpl:EntryCommentCount one="One comment" more="%d comments"}}</h3>
-
       <ul id="comments-list">
     </tpl:CommentsHeader>
 
     <tpl:CommentIf is_ping="0">
-      <li id="-{{tpl:CommentID}}" class="comment {{tpl:CommentIfMe}} {{tpl:CommentIfOdd}} {{tpl:CommentIfFirst}}">
+      <li id="{{tpl:lang comment}}-{{tpl:CommentID}}" class="reaction comment {{tpl:CommentIfMe}} {{tpl:CommentIfOdd}} {{tpl:CommentIfFirst}}">
+        <header class="comment-meta">
+          <cite class="comment-author">{{tpl:CommentAuthorLink}}</cite><span class="comment-date text-secondary">, <a href="#{{tpl:lang comment}}-{{tpl:CommentID}}">{{tpl:lang on}} {{tpl:CommentDate}} {{tpl:lang at}} {{tpl:CommentTime}}</a>{{tpl:lang :}}</span>
+        </header>
+
+        <div class="comment-content text">
+          {{tpl:SysBehavior behavior="publicCommentBeforeContent"}}
+
+          {{tpl:CommentContent}}
+        </div>
     </tpl:CommentIf>
 
     <tpl:CommentIf is_ping="1">
-      <li id="-{{tpl:PingID}}" class="ping {{tpl:PingIfOdd}} {{tpl:PingIfFirst}}">
+      <li id="{{tpl:lang trackback}}-{{tpl:PingID}}" class="reaction ping {{tpl:PingIfOdd}} {{tpl:PingIfFirst}}">
+        {{tpl:lang Trackback:}} <a class="ping-link" href="{{tpl:PingAuthorURL}}" {{tpl:PingNoFollow}}>{{tpl:PingTitle}}</a>, <cite class="ping-author">{{tpl:PingBlogName}}</cite><span class="ping-date text-secondary">, <a href="#{{tpl:lang trackback}}-{{tpl:PingID}}">{{tpl:PingDate}}, {{tpl:PingTime}}</a></span>
+      </li>
     </tpl:CommentIf>
-
-    <header class="comment-meta">
-      <tpl:CommentIf is_ping="0">
-        <cite class="comment-author">{{tpl:CommentAuthorLink}}</cite><span class="comment-date text-secondary">, <a href="#-{{tpl:CommentID}}">{{tpl:lang on}} {{tpl:CommentDate}} {{tpl:lang at}} {{tpl:CommentTime}}</a>{{tpl:lang :}}</span>
-      </tpl:CommentIf>
-
-      <tpl:CommentIf is_ping="1">
-        <span class="label">{{tpl:lang Ping}}</span> <cite class="comment-author">{{tpl:CommentAuthor}}</cite><span class="comment-date text-secondary">, <a href="#comment-{{tpl:CommentID}}">{{tpl:lang on}} {{tpl:CommentDate}} {{tpl:lang at}} {{tpl:CommentTime}}</a>{{tpl:lang :}}</span>
-      </tpl:CommentIf>
-    </header>
-
-    <div class="comment-content<tpl:CommentIf is_ping="1"> ping-content</tpl:CommentIf> text">
-      {{tpl:SysBehavior behavior="publicCommentBeforeContent"}}
-
-      {{tpl:CommentContent}}
-
-      <tpl:CommentIf is_ping="1">
-        <p>
-          <a href="{{tpl:CommentAuthorURL}}" ref="nofollow">{{tpl:lang Read this post ›}}</a>
-        </p>
-      </tpl:CommentIf>
-
-      {{tpl:SysBehavior behavior="publicCommentAfterContent"}}
-    </div>
-
-    </li>
 
     <tpl:CommentsFooter>
       </ul>
@@ -90,7 +85,7 @@
       </tpl:Block>
 
       <tpl:Block name="comment-form-add">
-        <h3>{{tpl:lang Write a comment}}</h3>
+        <h3 class="reaction-title">{{tpl:lang Write a comment}}</h3>
 
         {{tpl:SysBehavior behavior="publicCommentFormBeforeContent"}}
 
@@ -134,37 +129,33 @@
 
 {{tpl:origineConfigEmailAuthor}}
 
-<tpl:origineCommentLinks>
-  <div class="comment-links text-secondary">
-    <ul>
-      <tpl:EntryIf show_comments="1">
-        <li>
-          {{tpl:lang Comment feed:}} {{tpl:origineEntryCommentFeedLink type="atom"}}
-        </li>
-      </tpl:EntryIf>
+<tpl:EntryIf pings_active="1">
+  <p class="post-meta text-secondary" id="comment-feed-link">
+    <a href="{{tpl:BlogFeedURL type="atom"}}/comments/{{tpl:EntryID}}" rel="nofollow">{{tpl:lang Subscribe to comments}}</a>
+  </p>
 
-      <tpl:EntryIf pings_active="1">
-        <script>
-          function origineTrackbackURLCopy() {
-            // Gets the trackback button & URL.
-            var trackbackButton = document.getElementById("trackback-url"),
-                trackbackURL = trackbackButton.getAttribute("data-trackback-url");
+  <script>
+    function origineTrackbackURLCopy() {
+      // Gets the trackback button & URL.
+      var trackbackButton  = document.getElementById("trackback-url"),
+          trackbackURL     = trackbackButton.getAttribute("data-trackback-url");
 
-            // Copies the trackback URL in the clipboard.
-            navigator.clipboard.writeText(trackbackURL);
+      if (document.getElementById("trackback-url-copied")) {
+        document.getElementById("trackback-url-copied").remove();
+      }
 
-            // Displays a message to confirm the copy.
-            trackbackButton.insertAdjacentHTML("afterend", ' <span id="trackback-url-copied">{{tpl:lang Link copied}}</span>');
-          }
-        </script>
+      // Copies the trackback URL in the clipboard.
+      navigator.clipboard.writeText(trackbackURL);
 
-        <li>
-          {{tpl:lang Trackbacks:}} {{tpl:origineEntryPingURL}}
-        </li>
-      </tpl:EntryIf>
-    </ul>
-  </div>
-</tpl:origineCommentLinks>
+      // Displays a message to confirm the copy.
+      trackbackButton.insertAdjacentHTML("afterend", ' <span id="trackback-url-copied">{{tpl:lang URL copied}}</span>');
+    }
+  </script>
+
+  <p class="post-meta text-secondary">
+    {{tpl:lang Add a trackback:}} <span data-trackback-url="{{tpl:EntryPingLink}}" id="trackback-url" onclick="origineTrackbackURLCopy();">{{tpl:EntryPingLink}}</span>
+  </p>
+</tpl:EntryIf>
 
 <tpl:EntryIf operator="or" comments_active="1" pings_active="1">
   </div>
