--- a/tpl/_entry-list-full.html
+++ b/tpl/_entry-list-full.html
@@ -47,7 +47,29 @@
         </tpl:TagsFooter>
       </tpl:EntryTags>
 
-      {{tpl:origineConfigPostListComments context="full"}}
+      <tpl:EntryIf operator="and" comments_active="1" pings_active="1" has_comment="1" has_ping="1">
+        <span class="post-meta text-secondary">
+          <a href="{{tpl:EntryURL}}#{{tpl:lang reactions}}">
+            {{tpl:EntryCommentCount one="One reaction" more="%d reactions" count_all="1"}}
+          </a>
+        </span>
+      </tpl:EntryIf>
+
+      <tpl:EntryIf operator="and" comments_active="1" pings_active="0" has_comment="1">
+        <span class="post-meta text-secondary">
+          <a href="{{tpl:EntryURL}}#{{tpl:lang reactions}}">
+            {{tpl:EntryCommentCount one="One comment" more="%d comments"}}
+          </a>
+        </span>
+      </tpl:EntryIf>
+
+      <tpl:EntryIf operator="and" comments_active="0" pings_active="1" has_ping="1">
+        <span class="post-meta text-secondary">
+          <a href="{{tpl:EntryURL}}#{{tpl:lang reactions}}">
+            {{tpl:EntryPingCount one="One trackback" more="%d trackbacks"}}
+          </a>
+        </span>
+      </tpl:EntryIf>
     </footer>
   </article>
 
