Correction oubli étiquette entrée de formulaire

--- a/tpl/_comments.html
+++ b/tpl/_comments.html
@@ -108,7 +108,7 @@
         </div>
 
         <div class="form-entry">
-          <label for="c_content"></label>
+          <label for="c_content">{{tpl:lang Your comment}}</label>
           <textarea name="c_content" id="c_content" cols="50"
            rows="7" required>{{tpl:CommentPreviewContent raw="1" encode_html="1"}}</textarea>
         </div>
