Mise à jour traductions

--- a/tpl/__layout.html
+++ b/tpl/__layout.html
@@ -20,7 +20,7 @@
 
     <link rel="stylesheet" type="text/css" href="{{tpl:BlogThemeURL}}/style.min.css" />
 
-    <link rel="alternate" type="application/atom+xml" title="{{tpl:lang RSS Feed}}" href="{{tpl:BlogFeedURL}}" />
+    <link rel="alternate" type="application/atom+xml" title="{{tpl:lang Syndicated feed}}" href="{{tpl:BlogFeedURL}}" />
 
     {{tpl:SysBehavior behavior="publicHeadContent"}}
   </head>
