--- a/tpl/_attachments.html
+++ b/tpl/_attachments.html
@@ -7,9 +7,7 @@
   </tpl:AttachmentsHeader>
 
   <li class="{{tpl:AttachmentType}}">
-    <tpl:AttachmentIf>
-      <a href="{{tpl:AttachmentURL}}">{{tpl:AttachmentTitle}}</a>
-    </tpl:AttachmentIf>
+    <a href="{{tpl:AttachmentURL}}" type="{{tpl:AttachmentMimeType}}">{{tpl:AttachmentTitle}}</a>
   </li>
 
   <tpl:AttachmentsFooter>
