Mise à jour nom de fonction

--- a/tpl/__layout.html
+++ b/tpl/__layout.html
@@ -22,6 +22,8 @@
 
     <link rel="alternate" type="application/atom+xml" title="{{tpl:lang Syndicated feed}}" href="{{tpl:BlogFeedURL}}" />
 
+    {{tpl:origineHeadMeta}}
+
     {{tpl:SysBehavior behavior="publicHeadContent"}}
   </head>
 
