Harmonisation code HTML

--- a/tpl/_entry-list-short.html
+++ b/tpl/_entry-list-short.html
@@ -24,9 +24,7 @@
       <span class="post-meta text-secondary">
         {{tpl:origineSeparator}}
 
-        <a href="{{tpl:EntryURL}}#{{tpl:lang reactions}}">
-          {{tpl:EntryCommentCount one="One reaction" more="%d reactions" count_all="1"}}
-        </a>
+        <a href="{{tpl:EntryURL}}#{{tpl:lang reactions}}">{{tpl:EntryCommentCount one="One reaction" more="%d reactions" count_all="1"}}</a>
       </span>
     </tpl:EntryIf>
 
@@ -34,9 +32,7 @@
       <span class="post-meta text-secondary">
         {{tpl:origineSeparator}}
 
-        <a href="{{tpl:EntryURL}}#{{tpl:lang reactions}}">
-          {{tpl:EntryCommentCount one="One comment" more="%d comments"}}
-        </a>
+        <a href="{{tpl:EntryURL}}#{{tpl:lang reactions}}">{{tpl:EntryCommentCount one="One comment" more="%d comments"}}</a>
       </span>
     </tpl:EntryIf>
 
@@ -44,9 +40,7 @@
       <span class="post-meta text-secondary">
         {{tpl:origineSeparator}}
 
-        <a href="{{tpl:EntryURL}}#{{tpl:lang reactions}}">
-          {{tpl:EntryPingCount one="One trackback" more="%d trackbacks"}}
-        </a>
+        <a href="{{tpl:EntryURL}}#{{tpl:lang reactions}}">{{tpl:EntryPingCount one="One trackback" more="%d trackbacks"}}</a>
       </span>
     </tpl:EntryIf>
   </article>
