--- a/tpl/_entry-post.html
+++ b/tpl/_entry-post.html
@@ -57,9 +57,7 @@
           </div>
 
           <div class="post-pagination-link-container">
-            <a href="{{tpl:EntryURL}}" rel="prev">
-              {{tpl:EntryTitle}}
-            </a>
+            <a href="{{tpl:EntryURL}}" rel="prev">{{tpl:EntryTitle}}</a>
           </div>
         </div>
       </tpl:EntryPrevious>
@@ -71,9 +69,7 @@
           </div>
 
           <div class="post-pagination-link-container">
-            <a href="{{tpl:EntryURL}}" rel="next">
-              {{tpl:EntryTitle}}
-            </a>
+            <a href="{{tpl:EntryURL}}" rel="next">{{tpl:EntryTitle}}</a>
           </div>
         </div>
       </tpl:EntryNext>
