--- a/tpl/tags.html
+++ b/tpl/tags.html
@@ -13,7 +13,9 @@
 
   <ul class="tags">
     <tpl:Tags>
-      <li><a href="{{tpl:TagURL}}" class="tag{{tpl:TagRoundPercent}}">{{tpl:TagID}}</a></li>
+      <li>
+        <a href="{{tpl:TagURL}}" class="tag{{tpl:TagRoundPercent}}">{{tpl:TagID}}</a>
+      </li>
     </tpl:Tags>
   </ul>
 </tpl:Block>
