--- a/tpl/_entry-list-standard.html
+++ b/tpl/_entry-list-standard.html
@@ -39,25 +39,19 @@
 
       <tpl:EntryIf operator="and" comments_active="1" pings_active="1" has_comment="1" has_ping="1">
         <span class="post-list-reactions text-secondary">
-          <a href="{{tpl:EntryURL}}#{{tpl:lang reactions}}">
-            {{tpl:EntryCommentCount one="One reaction" more="%d reactions" count_all="1"}}
-          </a>
+          <a href="{{tpl:EntryURL}}#{{tpl:lang reactions}}">{{tpl:EntryCommentCount one="One reaction" more="%d reactions" count_all="1"}}</a>
         </span>
       </tpl:EntryIf>
 
       <tpl:EntryIf operator="and" comments_active="1" pings_active="0" has_comment="1">
         <span class="post-list-reactions text-secondary">
-          <a href="{{tpl:EntryURL}}#{{tpl:lang reactions}}">
-            {{tpl:EntryCommentCount one="One comment" more="%d comments"}}
-          </a>
+          <a href="{{tpl:EntryURL}}#{{tpl:lang reactions}}">{{tpl:EntryCommentCount one="One comment" more="%d comments"}}</a>
         </span>
       </tpl:EntryIf>
 
       <tpl:EntryIf operator="and" comments_active="0" pings_active="1" has_ping="1">
         <span class="post-list-reactions text-secondary">
-          <a href="{{tpl:EntryURL}}#{{tpl:lang reactions}}">
-            {{tpl:EntryPingCount one="One trackback" more="%d trackbacks"}}
-          </a>
+          <a href="{{tpl:EntryURL}}#{{tpl:lang reactions}}">{{tpl:EntryPingCount one="One trackback" more="%d trackbacks"}}</a>
         </span>
       </tpl:EntryIf>
     </footer>
