Transfert fonction widgets de l’extension au thème

--- a/tpl/__layout.html
+++ b/tpl/__layout.html
@@ -41,11 +41,11 @@
 
           {{tpl:SimpleMenu id="main-menu"}}
 
-          <tpl:origineConfigWidgetsNav>
+          <tpl:origineHeaderWidgetsNav>
             <div id="blognav">
               {{tpl:Widgets type="nav"}}
             </div>
-          </tpl:origineConfigWidgetsNav>
+          </tpl:origineHeaderWidgetsNav>
 
           {{tpl:SysBehavior behavior="publicTopAfterContent"}}
         </tpl:Block>
