--- a/tpl/home.html
+++ b/tpl/home.html
@@ -26,11 +26,11 @@
 
   {{tpl:SimpleMenu id="main-menu"}}
 
-  <tpl:origineConfigWidgetsNav>
+  <tpl:origineHeaderWidgetsNav>
     <div id="blognav">
       {{tpl:Widgets type="nav"}}
     </div>
-  </tpl:origineConfigWidgetsNav>
+  </tpl:origineHeaderWidgetsNav>
 
   {{tpl:SysBehavior behavior="publicTopAfterContent"}}
 </tpl:Block>
