--- a/tpl/_comments.html
+++ b/tpl/_comments.html
@@ -132,11 +132,23 @@
 {{tpl:origineConfigEmailAuthor}}
 
 <tpl:origineCommentLinks>
-  <tpl:EntryIf pings_active="1">
-    <p class="text-secondary text-small" id="comment-feed-link">
-      <a href="{{tpl:BlogFeedURL type="atom"}}/comments/{{tpl:EntryID}}" rel="nofollow">{{tpl:lang Subscribe to comments}}</a>
-    </p>
+  <p class="text-secondary text-small" id="comment-feed-link">
+    <tpl:EntryIf operator="and" comments_active="1" pings_active="1">
+      <a href="{{tpl:BlogFeedURL type="atom"}}/comments/{{tpl:EntryID}}" rel="nofollow">{{tpl:lang Subscribe to reactions}}</a>
+    </tpl:EntryIf>
 
+    <tpl:EntryIf operator="and" comments_active="1" pings_active="0">
+      <a href="{{tpl:BlogFeedURL type="atom"}}/comments/{{tpl:EntryID}}" rel="nofollow">{{tpl:lang Subscribe to comments}}</a>
+    </tpl:EntryIf>
+
+    <tpl:EntryIf operator="and" comments_active="0" pings_active="1">
+      <a href="{{tpl:BlogFeedURL type="atom"}}/comments/{{tpl:EntryID}}" rel="nofollow">{{tpl:lang Subscribe to trackbacks}}</a>
+    </tpl:EntryIf>
+
+
+  </p>
+
+  <tpl:EntryIf pings_active="1">
     <script>
       function origineTrackbackURLCopy() {
         // Gets the trackback button & URL.
