Correction : rétroliens ne s’affichaient pas quand commentaires fermés

--- a/tpl/_comments.html
+++ b/tpl/_comments.html
@@ -14,7 +14,7 @@
   </tpl:EntryIf>
 </tpl:EntryIf>
 
-<tpl:EntryIf show_comments="1">
+<tpl:EntryIf operator="or" show_comments="1" show_pings="1">
   <tpl:Comments with_pings="1">
     <tpl:CommentsHeader>
       <ul id="reactions-list">
