Ajout option positionnement widgets de navigation

--- a/tpl/_sidebar.html
+++ b/tpl/_sidebar.html
@@ -1,5 +1,11 @@
-<aside id="site-sidebar">
-  <div id="blogextra">
+<tpl:origineWidgetsNav>
+  <aside id="blognav">
+    {{tpl:Widgets type="nav"}}
+  </aside>
+</tpl:origineWidgetsNav>
+
+<tpl:origineWidgetsExtra>
+  <aside id="blogextra">
     {{tpl:Widgets type="extra"}}
-  </div>
-</aside>
+  </aside>
+</tpl:origineWidgetsExtra>
