Modification classe text pour éviter confusion avec widgets texte

--- a/tpl/static.html
+++ b/tpl/static.html
@@ -14,7 +14,7 @@
 
     <tpl:Entries>
       <article id="{{tpl:lang page}}-{{tpl:EntryID}}" class="page"{{tpl:origineEntryLang}}>
-        <section class="text">
+        <section class="content-text">
           {{tpl:SysBehavior behavior="publicEntryBeforeContent"}}
 
           {{tpl:EntryContent}}
