--- a/tpl/_comments.html
+++ b/tpl/_comments.html
@@ -26,7 +26,7 @@
           <cite class="comment-author">{{tpl:CommentAuthorLink}}</cite><span class="comment-date text-secondary">, <a href="#{{tpl:lang comment}}-{{tpl:CommentID}}">{{tpl:lang on}} {{tpl:CommentDate}} {{tpl:lang at}} {{tpl:CommentTime}}</a>{{tpl:lang :}}</span>
         </header>
 
-        <div class="comment-content text">
+        <div class="comment-content content-text">
           {{tpl:SysBehavior behavior="publicCommentBeforeContent"}}
 
           {{tpl:CommentContent}}
@@ -77,7 +77,7 @@
               <h3>{{tpl:lang Previewing}}</h3>
             </div>
 
-            <div class="comment-content text">
+            <div class="comment-content content-text">
               {{tpl:CommentPreviewContent}}
             </div>
 
