--- a/tpl/search.html
+++ b/tpl/search.html
@@ -10,7 +10,7 @@
   <div class="content-info">
     <h1 class="content-title">{{tpl:lang Search}}</h1>
 
-    <section class="page-content text">
+    <section class="page-content content-text">
       <form action="{{tpl:BlogURL}}" id="page-search-form" method="get" role="search">
         <div class="form-entry">
           <input aria-label="Recherche" class="page-search-form-input" maxlength="255" name="q" placeholder="{{tpl:lang Search terms}}" type="text" value="{{tpl:SysSearchString}}" />
