Modification pour balises HTML minimalistes

--- a/tpl/404.html
+++ b/tpl/404.html
@@ -5,12 +5,12 @@
 </tpl:Block>
 
 <tpl:Block name="head-description">
-  <meta name="description" content="{{tpl:lang There is nothing to display}}" />
+  <meta name=description content="{{tpl:lang There is nothing to display}}">
 </tpl:Block>
 
 <tpl:Block name="main-content">
-  <div id="content-info">
-    <h1 class="content-title">{{tpl:lang No content}}</h1>
+  <div id=content-info>
+    <h1 class=content-title>{{tpl:lang No content}}</h1>
 
     {{tpl:include src="_entry-empty.html"}}
   </div>
