--- a/tpl/_attachments.html
+++ b/tpl/_attachments.html
@@ -1,13 +1,13 @@
 <tpl:Attachments>
   <tpl:AttachmentsHeader>
-    <div id="annexes" class="attachments content">
+    <div id=annexes class="attachments content">
       <h3>Annexes</h3>
 
       <ol>
   </tpl:AttachmentsHeader>
 
-  <li class="{{tpl:AttachmentType}}">
-    <a href="{{tpl:AttachmentURL}}" type="{{tpl:AttachmentMimeType}}">{{tpl:AttachmentTitle}}</a>
+  <li class={{tpl:AttachmentType}}>
+    <a href={{tpl:AttachmentURL}} type={{tpl:AttachmentMimeType}}>{{tpl:AttachmentTitle}}</a>
   </li>
 
   <tpl:AttachmentsFooter>
