--- a/tpl/_sidebar.html
+++ b/tpl/_sidebar.html
@@ -1,11 +1,11 @@
 <tpl:origineWidgetsNav>
-  <aside id="blognav">
+  <aside id=blognav>
     {{tpl:Widgets type="nav"}}
   </aside>
 </tpl:origineWidgetsNav>
 
 <tpl:origineWidgetsExtra>
-  <aside id="blogextra">
+  <aside id=blogextra>
     {{tpl:Widgets type="extra"}}
   </aside>
 </tpl:origineWidgetsExtra>
