--- a/tpl/page.html
+++ b/tpl/page.html
@@ -6,11 +6,11 @@
 
 <tpl:Block name="head-description">
   <tpl:EntryIf extended="1">
-    <meta name="description"{{tpl:origineEntryLang}} content="{{tpl:EntryExcerpt encode_html="1" remove_html="1"}}" />
+    <meta name=description{{tpl:origineEntryLang}} content="{{tpl:EntryExcerpt encode_html="1" remove_html="1"}}">
   </tpl:EntryIf>
 
   <tpl:EntryIf extended="0">
-    <meta name="description"{{tpl:origineEntryLang}} content="{{tpl:EntryContent encode_html="1" remove_html="1" cut_string="150"}}<tpl:EntryIfContentCut encode_html="1" remove_html="1" cut_string="150"> […]</tpl:EntryIfContentCut>" />
+    <meta name=description{{tpl:origineEntryLang}} content="{{tpl:EntryContent encode_html="1" remove_html="1" cut_string="150"}}<tpl:EntryIfContentCut encode_html="1" remove_html="1" cut_string="150"> […]</tpl:EntryIfContentCut>">
   </tpl:EntryIf>
 </tpl:Block>
 
@@ -19,13 +19,13 @@
 </tpl:Block>
 
 <tpl:Block name="footer-scripts">
-  <script src="{{tpl:BlogQmarkURL}}pf={{tpl:BlogJsJQuery}}/jquery.js"></script>
+  <script src={{tpl:BlogQmarkURL}}pf={{tpl:BlogJsJQuery}}/jquery.js></script>
 
   <tpl:EntryIf show_comments="1">
-    <script src="{{tpl:BlogQmarkURL}}pf=util.js"></script>
-    <script type="application/json" id="dc_post_remember_str-data">
+    <script src={{tpl:BlogQmarkURL}}pf=util.js></script>
+    <script type=application/json id=dc_post_remember_str-data>
       { "post_remember_str": "{{tpl:lang Remember me}}" }
     </script>
-    <script src="{{tpl:BlogQmarkURL}}pf=post.js"></script>
+    <script src={{tpl:BlogQmarkURL}}pf=post.js></script>
   </tpl:EntryIf>
 </tpl:Block>
