--- a/tpl/tag.html
+++ b/tpl/tag.html
@@ -5,14 +5,14 @@
 </tpl:Block>
 
 <tpl:Block name="head-description">
-  <meta name="description" content="{{tpl:lang Posts related to the tag}} {{tpl:TagID encode_html="1"}}" />
+  <meta name=description content="{{tpl:lang Posts related to the tag}} {{tpl:TagID encode_html="1"}}">
 </tpl:Block>
 
 <tpl:Block name="main-content">
-  <header class="content-info">
-    <span class="label">{{tpl:lang tag}}</span>
+  <header class=content-info>
+    <span class=label>{{tpl:lang tag}}</span>
 
-    <h1 class="content-title">{{tpl:TagID}}</h1>
+    <h1 class=content-title>{{tpl:TagID}}</h1>
   </header>
 
   {{tpl:originePostListType}}
