--- a/tpl/_footer.html
+++ b/tpl/_footer.html
@@ -1,9 +1,9 @@
-<footer class="text-secondary" id="site-footer">
+<footer class=text-secondary id=site-footer>
   {{tpl:Widgets type="custom"}}
 
   <tpl:SysIf jquery_needed="1">
     <tpl:Block name="footer-scripts">
-      <script src="{{tpl:BlogQmarkURL}}pf={{tpl:BlogJsJQuery}}/jquery.js"></script>
+      <script src={{tpl:BlogQmarkURL}}pf={{tpl:BlogJsJQuery}}/jquery.js></script>
     </tpl:Block>
   </tpl:SysIf>
 
