--- a/tpl/tags.html
+++ b/tpl/tags.html
@@ -7,14 +7,14 @@
 <tpl:Block name="head-description"></tpl:Block>
 
 <tpl:Block name="main-content">
-  <header class="content-info">
-    <h1 class="content-title">{{tpl:lang Tags}}</h1>
+  <header class=content-info>
+    <h1 class=content-title>{{tpl:lang Tags}}</h1>
   </header>
 
-  <ul class="tags">
+  <ul class=tags>
     <tpl:Tags>
       <li>
-        <a href="{{tpl:TagURL}}" class="tag{{tpl:TagRoundPercent}}">{{tpl:TagID}}</a>
+        <a href={{tpl:TagURL}} class=tag{{tpl:TagRoundPercent}}>{{tpl:TagID}}</a>
       </li>
     </tpl:Tags>
   </ul>
